# advent_of_code

2022/cpp/day1/: Makefile  compile_commands.json  day1p1  day1p2
2022/cpp/day1/src/: day1p1.cpp  day1p2.cpp  lib.cpp  lib.h
2022/cpp/utils/src/: utils.cpp  utils.h
2022/python/day1/: day1p1.py  day1p2.py  lib.py
2022/python/utils/: utils.py
2022/rust/day1/: Cargo.toml
2022/rust/day1/src/: day1p1.rs  day1p2.rs  lib.rs
2022/rust/day2/: Cargo.toml
2022/rust/day2/src/: day2p1.rs  day2p2.rs  lib.rs
2022/rust/day3/: test_input
2022/rust/day3/src/: day3p1.rs  day3p2.rs  lib.rs
2022/rust/day4/: Cargo.toml
2022/rust/day4/src/: day4p1.rs  day4p2.rs  lib.rs
2022/rust/day5/: Cargo.toml  log
2022/rust/day5/src/: day5p1.rs  day5p2.rs  lib.rs
2022/rust/day6/: Cargo.toml
2022/rust/day6/src/: day6p1.rs  day6p2.rs  lib.rs
2022/rust/utils/src/: lib.rs
2022/zig/day1/: build.zig
2022/zig/day1/src/: day1p1.zig  day1p2.zig  lib.zig
2022/zig/day2/: build.zig
2022/zig/day2/src/: day2p1.zig  day2p2.zig  lib.zig
2022/zig/utils/src/: utils.zig
