[package]
name = "day1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path ="../utils/" }

[[bin]]
name = "day1p1"
path = "src/day1p1.rs"

[[bin]]
name = "day1p2"
path = "src/day1p2.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[profile.release]
lto = true
strip = "symbols"
