[package]
name = "day4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day4p1"
path = "src/day4p1.rs"

[[bin]]
name = "day4p2"
path = "src/day4p2.rs"

[lib]
name = "lib"
path = "src/lib.rs"
