[package]
name = "day5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }

[[bin]]
name = "day5p1"
path = "src/day5p1.rs"

[[bin]]
name = "day5p2"
path = "src/day5p2.rs"

[lib]
name = "lib"
path = "src/lib.rs"
