[package]
name = "day6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }

[[bin]]
name = "day6p1"
path = "src/day6p1.rs"

[[bin]]
name = "day6p2"
path = "src/day6p2.rs"

[lib]
name = "lib"
path = "src/lib.rs"
